<resources>
    <string name="app_name">GameScore</string>
    <string name="home">Home</string>
    <string name="currently">My games</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="hint_search">Game name here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="game_rated">Rated a game</string>
    <string name="register_text">You don\'t have an account? Register here</string>
    <string name="register_button">Register</string>
    <string name="change_to_email">Use email instead</string>
    <string name="change_to_username">Use username instead</string>
    <string name="login">Log in</string>
    <string name="forgot_password_button">Forgot your password? Click here</string>
    <string name="hint_email">Your email here</string>
    <string name="hint_username">Your username here</string>
    <string name="hint_password">Your password here</string>
    <string name="hint_new_password">Your new password here</string>
    <string name="hint_new_password_confirm">Confirm your password</string>
    <string name="change_password_button">Change password</string>
    <string name="new_password">write new password</string>
    <string name="dialog_delete_account_title">Are you sure to delete your account?</string>
    <string name="dialog_delete_message">This action is permanent and can\'t be reverted</string>
    <string name="title_account">Account</string>
    <string name="title_delete">Delete account</string>
    <string name="title_logout">Log out</string>
    <string name="title_change_email">Change email</string>
    <string name="key_delete">delete-account</string>
    <string name="key_logout">logout</string>
    <string name="key_email">email</string>
    <string name="description_logout">Logs out from your account</string>
    <string name="description_delete">Deletes your account forever</string>
    <string name="change_picture">Change profile picture</string>
    <string name="reset_picture">Reset profile picture to default</string>
    <string name="hint_display_name">Your display name here</string>
    <string name="save_profile_button">Save profile</string>
    <string name="search_result_cant">results found</string>
    <string name="setup_profile">Configure profile</string>
    <string name="register">Register</string>
    <string name="login_title">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_results">No results found for "%s"</string>
    <string name="tab_empty">There is no data to show</string>
    <string name="add_videogame">Add game</string>
    <string name="game_rating">Game rating here</string>
    <string name="game_sinopsis">What\'s the game about?</string>
    <string name="game_name">Game name here</string>
    <string name="reset_game_img">Reset game image</string>
    <string name="save_game">Save game</string>
    <string name="select_game_img">Select game image</string>
    <string name="tab_options">Tab options</string>
    <string name="email_summary">Chanes the email address of your account</string>
    <string name="key_username">username</string>
    <string name="title_change_username">Change username</string>
    <string name="username_summary">Changes the summary of your account</string>
    <string name="title_change_password">Change password</string>
    <string name="key_password">password</string>
    <string name="password_summary">Changes the password of your account</string>
    <string name="user_reviews">Users reviews</string>
    <string name="my_review">Your review</string>
    <string name="edit_review">Edit</string>
    <string name="delete_review">Delete</string>
    <string name="dialog_delete_review_title">Are you sure to delete this review?</string>
    <string name="your_rating">Your rating</string>
    <string name="write_review">Your thougths of the game</string>
    <string name="save_review">Save review</string>
    <string name="dialog_no_review_title">There is no review of this game</string>
    <string name="dialog_no_review_message">Do you want to write a review of this game?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_reviews">My reviews</string>
    <string name="no_data">No reviews found</string>
    <string name="show_games">Show your saved games by tag</string>
    <string name="played">Played</string>
    <string name="playing">Playing</string>
    <string name="to_play">Want to play</string>
</resources>