<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="datos">
    <PreferenceCategory android:title="@string/title_account">


        <EditTextPreference
            android:id="@+id/preferences_change_username"
            android:defaultValue="Not logged in"
            android:key="@string/key_username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_change_username"
            app:summary="@string/username_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:id="@+id/preferences_change_password"
            android:key="@string/key_password"
            android:summary="@string/password_summary"
            android:title="@string/title_change_password" />

        <EditTextPreference
            android:id="@+id/preferences_change_email"
            android:defaultValue="Not logged in"
            android:key="@string/key_email"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/title_change_email"
            app:summary="@string/email_summary"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:id="@+id/preferences_logout"
            android:key="@string/key_logout"
            android:summary="@string/description_logout"
            android:title="@string/title_logout" />

        <Preference
            android:id="@+id/preferences_delete"
            android:key="@string/key_delete"
            android:summary="@string/description_delete"
            android:title="@string/title_delete" />
    </PreferenceCategory>
</PreferenceScreen>