<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.main.MyGamesFragment">

    <TextView
        android:id="@+id/show_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_games"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/to_play_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/to_play_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_play"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/playing_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_games" />

    <Button
        android:id="@+id/playing_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/played_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_play_games" />

    <Button
        android:id="@+id/played_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playing_games" />
</androidx.constraintlayout.widget.ConstraintLayout>