<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.login.SetupProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_default"
        app:shapeAppearanceOverlay="@style/ProfilePicture"
        app:layout_constraintBottom_toTopOf="@+id/change_display_name"
        app:layout_constraintEnd_toStartOf="@+id/change_profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/change_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_picture"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/change_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/change_profile_pic" />

    <EditText
        android:id="@+id/change_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_display_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/save_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <Button
        android:id="@+id/save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_display_name" />

</androidx.constraintlayout.widget.ConstraintLayout>